SERVER-7182 Call getLastError on the correct database in mongorestore