jstests/tool/restorewithauth.js
@@ -23,22 +23,25 @@ var conn = startMongod( "--port", port, "--dbpath", "/data/db/" + baseName, "--n
 var foo = conn.getDB( "foo" );
 for( var i = 0; i < 4; i++ ) {
     foo["bar"].save( { "x": i } );
+    foo["baz"].save({"x": i});
 }
 
 // make sure the collection exists
 assert.eq( foo.system.namespaces.count({name: "foo.bar"}), 1 )
 
 //make sure it has no index except _id
-assert.eq( foo.system.indexes.count(), 1 )
+assert.eq(foo.system.indexes.count(), 2);
+
+foo.bar.createIndex({x:1});
+assert.eq(foo.system.indexes.count(), 3);
 
 // get data dump
 var dumpdir = "/data/db/restorewithauth-dump1/";
 resetDbpath( dumpdir );
-x = runMongoProgram( "mongodump", "--db", "foo", "-h", "127.0.0.1:"+port, "--collection", "bar", 
-                     "--out", dumpdir );
+x = runMongoProgram("mongodump", "--db", "foo", "-h", "127.0.0.1:"+port, "--out", dumpdir);
 
-// now drop the collection
-foo.bar.drop();
+// now drop the db
+foo.dropDatabase();
 
 // stop mongod
 stopMongod( port );
@@ -55,22 +58,45 @@ admin.auth( "admin" , "admin" );
 var foo = conn.getDB( "foo" )
 
 // make sure no collection with the same name exists
-assert.eq( foo.system.namespaces.count( {name: "foo.bar"}), 0 )
+assert.eq(foo.system.namespaces.count( {name: "foo.bar"}), 0);
+assert.eq(foo.system.namespaces.count( {name: "foo.baz"}), 0);
 
 // now try to restore dump
 x = runMongoProgram( "mongorestore", "-h", "127.0.0.1:" + port,  "--dir" , dumpdir, "-vvvvv" );
 
 // make sure that the collection isn't restored
-assert.eq( foo.system.namespaces.count({name: "foo.bar"}), 0 )
+assert.eq(foo.system.namespaces.count({name: "foo.bar"}), 0);
+assert.eq(foo.system.namespaces.count({name: "foo.baz"}), 0);
 
 // now try to restore dump with correct credentials
 x = runMongoProgram( "mongorestore", "-h", "127.0.0.1:" + port, "-d", "foo", "-u", "admin", "-p",
                      "admin", "--dir", dumpdir + "foo/", "-vvvvv");
 
 // make sure that the collection was restored
-assert.eq( foo.system.namespaces.count({name: "foo.bar"}), 1 )
+assert.eq(foo.system.namespaces.count({name: "foo.bar"}), 1);
+assert.eq(foo.system.namespaces.count({name: "foo.baz"}), 1);
 
 // make sure the collection has 4 documents
-assert.eq( foo.bar.count(), 4 )
+assert.eq(foo.bar.count(), 4);
+assert.eq(foo.baz.count(), 4);
+
+foo.dropDatabase();
+
+// make sure that the collection is empty
+assert.eq(foo.system.namespaces.count({name: "foo.bar"}), 0);
+assert.eq(foo.system.namespaces.count({name: "foo.baz"}), 0);
+
+foo.addUser('user', 'password');
+
+// now try to restore dump with foo database credentials
+x = runMongoProgram("mongorestore", "-h", "127.0.0.1:" + port, "-d", "foo", "-u", "user", "-p",
+                    "password", "--dir", dumpdir + "foo/", "-vvvvv");
+
+// make sure that the collection was restored
+assert.eq(foo.system.namespaces.count({name: "foo.bar"}), 1);
+assert.eq(foo.system.namespaces.count({name: "foo.baz"}), 1);
+assert.eq(foo.bar.count(), 4);
+assert.eq(foo.baz.count(), 4);
+assert.eq(foo.system.indexes.count(), 4); // _id on foo, _id on bar, x on foo, _id on system.users
 
 stopMongod( port );
